updated Naukri Resume Upload Script

--- a/UI_Automation_Nunit/UI_Automation_Nunit.csproj
+++ b/UI_Automation_Nunit/UI_Automation_Nunit.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Application.Pages\Application.Pages.csproj" />
     <ProjectReference Include="..\Framework\Framework.csproj" />
   </ItemGroup>
 
