--- a/Application.Pages/Application.Pages.csproj
+++ b/Application.Pages/Application.Pages.csproj
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="NaukriPages\" />
+    <PackageReference Include="IKVM" Version="8.6.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Framework\Framework.csproj" />
   </ItemGroup>
 
 </Project>
