--- a/Framework/Framework.csproj
+++ b/Framework/Framework.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="NUnit" Version="3.13.3" />
+    <PackageReference Include="Selenium.Support" Version="4.11.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.11.0" />
   </ItemGroup>
 
