--- a/Application.Pages/Application.Pages.csproj
+++ b/Application.Pages/Application.Pages.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Framework\Framework.csproj" />
+    <ProjectReference Include="..\Framework\AFramework.csproj" />
   </ItemGroup>
 
 </Project>
