--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,6 +56,6 @@ steps:
 
 - task: PublishPipelineArtifact@1
   inputs:
-    targetPath: '$(Pipeline.Workspace)'
+    targetPath: 'TestResults'
     artifact: 'ExtentResultsAndLogs'
     publishLocation: 'pipeline'
