Update testFilter criteria

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,6 +49,7 @@ steps:
       **\bin\**\*API_Automation_NUnitTests.dll
       !**\obj\**
     searchFolder: '$(System.DefaultWorkingDirectory)'
+    testFiltercriteria: 'TestCategory=Login'
     uiTests: true
     runSettingsFile: 'Settings.runsettings'
     overrideTestrunParameters: '-Password $(PASSWORD) -UserName $(USERNAME)'
