--- a/Framework/Framework.csproj
+++ b/Framework/Framework.csproj
@@ -10,6 +10,9 @@
 	 <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="Selenium.WebDriver" Version="4.11.0" />
 	  <PackageReference Include="Selenium.Support" Version="4.11.0" />
+	  <PackageReference Include="Serilog" Version="3.0.1" />
+	  <PackageReference Include="Serilog.Formatting.Compact" Version="1.1.0" />
+	  <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
