--- a/Framework/Framework.csproj
+++ b/Framework/Framework.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+	 <PackageReference Include="FluentDateTime" Version="2.1.0" />
 	 <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="Selenium.WebDriver" Version="4.11.0" />
 	  <PackageReference Include="Selenium.Support" Version="4.11.0" />
