updated FW.cs and playwright hook.cs

--- a/UI_Automation_Playwright/UI_Automation_Playwright.csproj
+++ b/UI_Automation_Playwright/UI_Automation_Playwright.csproj
@@ -20,4 +20,8 @@
 	<PackageReference Include="SpecFlow.NUnit" Version="3.9.74" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Application.Pages\Application.Pages.csproj" />
+  </ItemGroup>
+
 </Project>
