Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,9 @@ steps:
 - task: CmdLine@2
   inputs:
     script: 'TASKKILL /fi "IMAGENAME eq chromedr*" /f /t'
-
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'test'
 - task: NuGetToolInstaller@1
   inputs:
     versionSpec: '6.6.1'
