--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,56 +6,58 @@
 #trigger:
 #- master
 
-#pool:
-#  vmimage: 'windows-latest'
+trigger: none
 
-#variables:
-#  solution: '**/*.sln'
-#  buildPlatform: 'Any CPU'
-#  buildConfiguration: 'Release'
+pool:
+  vmimage: 'windows-latest'
 
-#steps:
-#- task: CmdLine@2
-#  inputs:
-#    script: 'TASKKILL /fi "IMAGENAME eq chromedr*" /f /t'
+variables:
+  solution: '**/*.sln'
+  buildPlatform: 'Any CPU'
+  buildConfiguration: 'Release'
 
-#- task: NuGetToolInstaller@1
-#  inputs:
-#    versionSpec: '6.6.1'
+steps:
+- task: CmdLine@2
+  inputs:
+    script: 'TASKKILL /fi "IMAGENAME eq chromedr*" /f /t'
 
-#- task: NuGetCommand@2
-#  inputs:
-#    command: 'restore'
-#    restoreSolution: '**/*.sln'
-#    feedsToUse: 'select'
-#- task: VSBuild@1
-#  inputs:
-#    solution: 'AutomationPractice.sln'
-#    vsVersion: '17.0'
-#    msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:PackageLocation="$(build.artifactStagingDirectory)"'
-#    platform: '$(buildPlatform)'
-#    configuration: '$(buildConfiguration)'
-#    clean: true
+- task: NuGetToolInstaller@1
+  inputs:
+    versionSpec: '6.6.1'
 
-#- task: VSTest@2
-#  inputs:
-#    testSelector: 'testAssemblies'
-#    testAssemblyVer2: |
-#      **\bin\**\*BDD_with_Specflow.dll
-#      **\bin\**\*UI_Automation_Selenium.dll
-#      **\bin\**\*API_Automation_RestSharp.dll
-#      **\bin\**\*UnitTests.dll
-#      !**\obj\**
-#    searchFolder: '$(System.DefaultWorkingDirectory)'
-#    testFiltercriteria: 'TestCategory=LeetCode'
-#    uiTests: true
-#    runSettingsFile: 'Settings.runsettings'
-#    overrideTestrunParameters: '-Password $(PASSWORD) -UserName $(USERNAME)'
-#    platform: '$(buildPlatform)'
-#    configuration: '$(buildConfiguration)'
+- task: NuGetCommand@2
+  inputs:
+    command: 'restore'
+    restoreSolution: '**/*.sln'
+    feedsToUse: 'select'
+- task: VSBuild@1
+  inputs:
+    solution: 'AutomationPractice.sln'
+    vsVersion: '17.0'
+    msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:PackageLocation="$(build.artifactStagingDirectory)"'
+    platform: '$(buildPlatform)'
+    configuration: '$(buildConfiguration)'
+    clean: true
 
-#- task: PublishPipelineArtifact@1
-#  inputs:
-#    targetPath: 'TestResults'
-#    artifact: 'ExtentResultsAndLogs'
-#    publishLocation: 'pipeline'
+- task: VSTest@2
+  inputs:
+    testSelector: 'testAssemblies'
+    testAssemblyVer2: |
+      **\bin\**\*BDD_with_Specflow.dll
+      **\bin\**\*UI_Automation_Selenium.dll
+      **\bin\**\*API_Automation_RestSharp.dll
+      **\bin\**\*UnitTests.dll
+      !**\obj\**
+    searchFolder: '$(System.DefaultWorkingDirectory)'
+    testFiltercriteria: 'TestCategory=LeetCode'
+    uiTests: true
+    runSettingsFile: 'Settings.runsettings'
+    overrideTestrunParameters: '-Password $(PASSWORD) -UserName $(USERNAME)'
+    platform: '$(buildPlatform)'
+    configuration: '$(buildConfiguration)'
+
+- task: PublishPipelineArtifact@1
+  inputs:
+    targetPath: 'TestResults'
+    artifact: 'ExtentResultsAndLogs'
+    publishLocation: 'pipeline'
