added Ebay test cases| added Selenium reusable method actions

--- a/Application.Pages/Application.Pages.csproj
+++ b/Application.Pages/Application.Pages.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="IKVM" Version="8.6.2" />
+    <!--<PackageReference Include="IKVM" Version="8.6.2" />-->
   </ItemGroup>
 
   <ItemGroup>
