--- a/BDD_with_Specflow/BDD_with_Specflow.csproj
+++ b/BDD_with_Specflow/BDD_with_Specflow.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -8,6 +8,10 @@
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
   </PropertyGroup>
+
+  <ItemGroup>
+    <SpecFlowObsoleteCodeBehindFiles Remove="Features\EbayProductAccess.feature.cs" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="ExtentReports" Version="4.1.0" />
