--- a/Framework/Framework.csproj
+++ b/Framework/Framework.csproj
@@ -1,19 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
 
-  <ItemGroup>
-	 <PackageReference Include="FluentDateTime" Version="2.1.0" />
-	 <PackageReference Include="NUnit" Version="3.13.3" />
-    <PackageReference Include="Selenium.WebDriver" Version="4.11.0" />
-	  <PackageReference Include="Selenium.Support" Version="4.11.0" />
-	  <PackageReference Include="Serilog" Version="3.0.1" />
-	  <PackageReference Include="Serilog.Formatting.Compact" Version="1.1.0" />
-	  <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="FluentDateTime" Version="2.1.0" />
+		<PackageReference Include="NUnit" Version="3.13.3" />
+		<PackageReference Include="Selenium.WebDriver" Version="4.11.0" />
+		<PackageReference Include="Selenium.Support" Version="4.11.0" />
+		<PackageReference Include="Serilog" Version="3.0.1" />
+		<PackageReference Include="Serilog.Formatting.Compact" Version="1.1.0" />
+		<PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
+		<PackageReference Include="DotNetSeleniumExtras.WaitHelpers" Version="3.11.0" />
+	</ItemGroup>
 
 </Project>
