--- a/_BookStore/_BookStore.csproj
+++ b/_BookStore/_BookStore.csproj
@@ -13,12 +13,17 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.16" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\_BookStore.DataAccess\_BookStore.DataAccess.csproj" />
     <ProjectReference Include="..\_BookStore.Model\_BookStore.Model.csproj" />
     <ProjectReference Include="..\_BookStore.Utility\_BookStore.Utility.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
