--- a/_BookStore/_BookStore.csproj
+++ b/_BookStore/_BookStore.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -20,10 +20,6 @@
     <ProjectReference Include="..\_BookStore.DataAccess\_BookStore.DataAccess.csproj" />
     <ProjectReference Include="..\_BookStore.Model\_BookStore.Model.csproj" />
     <ProjectReference Include="..\_BookStore.Utility\_BookStore.Utility.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
